# TagFileSystem

./: .gitignore  README.md  pyproject.toml
src/: main.py  setting.py
src/database/: backend.py
src/tab_file_system/: config.py  main.py  setting.py
src/tab_file_system/core/: logger.py
src/tab_file_system/core/interface/: database.py  engine.py  file_metadata.py  filter.py  tag.py
src/tab_file_system/core/router/: base.py  database_event.py  watch_event.py
src/tab_file_system/data_model/: file_metadata.py
src/tab_file_system/database/: _sqlite.py  backend.py  database_model.py  sqlite.py  sqlite_model.py
src/tab_file_system/engine/: model.py  watchfile_engine.py
src/tab_file_system/event/: event_router.py
src/tab_file_system/file_data/: file_metadata.py
src/tab_file_system/pipeline/: default.py
src/tab_file_system/services/: engine.py  tagging.py
src/tab_file_system/tag/: tag.py
src/tag/: tag.py
src/tag_file_system/: main.py
src/tag_file_system/core/: logger.py
src/tag_file_system/core/interface/: database.py  engine.py
src/tag_file_system/core/router/: base.py  database_event.py  watch_event.py
src/tag_file_system/database/: sqlite.py
src/tag_file_system/pipeline/: default.py
src/tag_file_system/services/: engine.py  tagging.py
