[project]
name = "pythontagfilesystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "typer>=0.21.1",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.15",
]
